# routers/basic.go
@@ -6,7 +6,7 @@ import (
 )
 
 func InitBasicInfoRouter(r *gin.RouterGroup) {
-	basicInfoRouter := r.Group("/basic-info")
+	basicInfoRouter := r.Group("/basic-infos")
 	{
 		basicInfoRouter.POST("", api.CreateBasicInfo)
 		basicInfoRouter.DELETE("/:id", api.DeleteBasicInfo)
